--- a/app.json
+++ b/app.json
@@ -1,30 +1,35 @@
 {
   "expo": {
-    "name": "fridge-app",
+    "name": "StayFresh",
     "slug": "fridge-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/orange.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#e16868"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "foregroundImage": "./assets/orange.png",
+        "backgroundImage": "./assets/orange.png"
+      },
+      "package": "com.sarafullstack.fridgeapp"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "height": "100vh",
+      "display": "flex",
+      "justifyContent": "center",
+      "alignItems": "center"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7c7bb569-57e7-4ddd-9964-173efcd2394f"
+      }
     }
   }
 }
