--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "StayFresh",
     "slug": "fridge-app",
-    "version": "1.0.0",
+    "version": "4.0.0",
     "orientation": "portrait",
     "icon": "./assets/orange.png",
     "userInterfaceStyle": "light",
@@ -14,6 +14,7 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": "4",
       "adaptiveIcon": {
         "foregroundImage": "./assets/orange.png",
         "backgroundImage": "./assets/orange.png"
